# strasbourgpark-rs

./: Cargo.toml  README.md
src/: api.rs  client.rs  lib.rs
strasbourgpark-c/: Cargo.toml  Readme.md  build.rs  cbindgen.toml
strasbourgpark-c/include/: strasbourgpark.h
strasbourgpark-c/src/: api.rs  client.rs  lib.rs  macros.rs  runtime.rs
tests/: deserialize_test.rs
tests/samples/: data.strasbourg.eu_locations.json  data.strasbourg.eu_status.json  status_error.json
