[package]
name = "strasbourgpark-c"
version = "0.1.0"
authors = ["Yannick Heinrich <yannick.heinrich@gmail.com>"]
edition = "2018"

[lib]
name = "strasbourgpark"
crate-type = ["staticlib", "cdylib"]

workspace = ".."
[dependencies]
libc = "0.2"
strasbourgpark = {version = "0.1", path = ".."}
paste = "1.0"
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["full"] }
[build-dependencies]
cbindgen = "0.15"